# iocraft-note

./: Cargo.toml  README.md  data.json
claude-projects-viewer/: Cargo.toml  README.md
claude-projects-viewer/src/: main.rs  main_alt.rs  main_hybrid.rs  main_print.rs  parser.rs  types.rs
src/: main.rs
