[package]
name = "claude-projects-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
glob = "0.3.2"
home = "0.5.11"
iocraft = "0.7.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
smol = "2.0.2"

[[bin]]
name = "claude-projects-viewer-alt"
path = "src/main_alt.rs"

